--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.4.0",
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
-    "start": " react-scripts start",
+    "start": "react-dotenv && react-scripts start",
     "build": "react-dotenv && react-scripts build build",
     "test": "react-scripts build test",
     "eject": "react-scripts eject"
