--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_URL='https://socketio-server-opdevelopers.herokuapp.com'
+REACT_APP_API_URL='https://socketio-server-opdevelopers.herokuapp.com'
